[FIX] web: search view hotkey overlay z-index issue
Bootstrap uses z-index on its button classes.
It caused an issue with the overlay as the x symbol of a seach view
facet was displayed on top of the search bar overlay kbd tag.

Since the z-index here was not necessary, we set it to 0.

task id 3635644

closes odoo/odoo#148831

--- a/addons/web/static/src/search/search_bar/search_bar.scss
+++ b/addons/web/static/src/search/search_bar/search_bar.scss
@@ -10,4 +10,10 @@
     }
 
     animation: animate .25s ease-out;
+
+    .btn, .btn:focus {
+        // Boostrap plays around with the z-index of buttons, but this is not needed here
+        // It was causing issues with the hotkey overlay
+        z-index: 0;
+    }
 }
